<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.varun.grabit.activity.GrabItActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/welcome_app_name"-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="60sp" />-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:contentDescription="GrabIt"
            android:src="@drawable/grabit"
            app:srcCompat="@drawable/grabit" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_marginTop="15dp"
            android:text="@string/welcome_text"
            android:textColor="#fff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/welcome_btn_style_learn_more"
                android:text="@string/welcome_btn_learn_more"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnGrabItDiveIn"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/welcome_btn_style_sign_in"
                android:text="@string/welcome_btn_dive_in"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
